Fix Bug On IOS

--- a/2021/css/main.css
+++ b/2021/css/main.css
@@ -33,6 +33,13 @@ html.noscroll {
     width: 100%;
 }
 
+.hide{
+  display:none;
+}
+.show{
+  display:block;
+}
+
 a {
   text-decoration: none;
 }
@@ -264,16 +271,19 @@ header div.head_title{
 }
 
 #phone_menu {
-  width: 100%;
+  width: 70%;
   height: 100%;
+  text-align: center;
+  margin: 0 auto;
   /* border: 1px solid black; */
-  display: none;
   z-index: 10;
 }
 
 .phone_menu_flex {
   width: 100%;
   height: 100%;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .phone_menu_text_flex{
